# AA4NN

./: .gitignore  从.run安装cuda+cuDNN.md  安装caffe+digits.md
Analyze/: Analyze_AAOutput.ipynb  conv5-caffe-method1.ipynb  conv5-output-data-label-multiprocess.ipynb  conv5-output-data-multiprocess.ipynb  conv5_data_process.ipynb  histogram.ipynb
CONV-AA/: AA.cpp  CMakeLists.txt  CNN.h  common.cpp  convolution.cpp  main.cpp
GEMM/: CMakeLists.txt  CNN.h  common.cpp  convolution.cpp  main.cpp
Jaffe/: CMakeLists.txt  CNN.h  Darknet19.cpp  Darknet19.h  Inception_v1.cpp  Jaffe.sh  activation.cpp  common.cpp  convolution.cpp  convolution_mm.cpp  innerproduct.cpp  lrn.cpp  main.cpp  pooling.cpp  sigmoid.cpp
Jaffe-AA/: AA.cpp  CMakeLists.txt  CNN.h  Darknet19.cpp  Darknet19.h  Inception_v1.cpp  Jaffe-AA  Makefile  activation.cpp  common.cpp  concat.cpp  convolution.cpp  convolution_mm.cpp  innerproduct.cpp  lrn.cpp  main.cpp  pooling.cpp
Prune/: DrawPictures.ipynb  fine-tuning.ipynb
Prune/CaffeNet/: PruneCaffeNet.ipynb  caffenet.prototxt
Prune/GoogLeNet/: PruneGoogLeNet.ipynb  googlenet.prototxt
Prune/PruneCNN/: PruneCNN.ipynb  PruneCNN.py
Prune/VGG16/: PruneVGG16.ipynb  VGG16.prototxt
